@@ -77,3 +77,6 @@ elif action == 'newsearch':
 
 elif action == 'deletesearchhistory':
     navigator().deleteSearchHistory()
+
+elif action == 'paireddevices':
+    navigator().deleteDevice()
