@@ -1,4 +1,7 @@
-﻿[B]1.0.11[/B]
+﻿[B]1.0.12[/B]
+- DeviceID kezelése
+- Bejelentkezett eszközök törlése
+[B]1.0.11[/B]
 - Kategória csoportok kezelése
 [B]1.0.10[/B]
 - Forrás változás követése
